--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   wood-calculator:
     build:
@@ -7,10 +5,16 @@ services:
       dockerfile: Dockerfile
     container_name: wood-material-calculator
     ports:
-      - "6767:80"
+      - "80:80"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 3s
+      start_period: 5s
+      retries: 3
     networks:
       - app-network
 
