--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
